--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>카리나 만세 만세 만만세</title>
+<title>카리나 아멘 아멘 아아멘</title>
 <meta charset="utf-8">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <li><a href="2.html">카리나 최고</a></li>
         <li><a href="3.html">카리나 아멘</a></li>
     </ol>
-    <h2>카리나 만세</h2>
+    <h2>카리나 아멘</h2>
     <strong><u>-심은성-</u></strong>
     <p style="margin-top:40px;" >카리나 아멘
 </body>
