--- a/3.html
+++ b/3.html
@@ -1,18 +1,22 @@
 <!doctype html>
 <html>
 <head>
-<title>카리나 아멘 아멘 아아멘</title>
+<title>심은성의 연습 PYTHON</title>
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">카리나 목록</a></h1>
+    <h1><a href="index.html">코딩</a></h1>
     <ol>
-        <li><a href="1.html">카리나 만세</a></li>
-        <li><a href="2.html">카리나 최고</a></li>
-        <li><a href="3.html">카리나 아멘</a></li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">PYTHON</a></li>
+        <li><a href="hellper.html">HELLPER</a></li>
     </ol>
-    <h2>카리나 아멘</h2>
+    <h2>PYTHON</h2>
     <strong><u>-심은성-</u></strong>
-    <p style="margin-top:40px;" >카리나 아멘
+    <p>Following the report of the Strath Committee in 1955, the British government developed contingency plans for the continuity of government.
+        <br>This included construction of the underground Central Government War Headquarters (CGWHQ), codenamed "Burlington",
+        <br>at Corsham in Wiltshire. As planned, it would have been a "reserve Whitehall" where the central government
+        <br>could be moved in an emergency and, hopefully, survive a nuclear attack.</p>
 </body>
 </html>
