--- a/1.html
+++ b/1.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html>
 <head>
-<title>카리나 만세 만세 만만세</title>
+<title>심은성의 연습 HTML</title>
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">카리나 목록</a></h1>
+    <h1><a href="index.html">코딩</a></h1>
     <ol>
-        <li><a href="1.html">카리나 만세</a></li>
-        <li><a href="2.html">카리나 최고</a></li>
-        <li><a href="3.html">카리나 아멘</a></li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">PYTHON</a></li>
+        <li><a href="hellper.html">HELLPER</a></li>
     </ol>
-    <h2>카리나 만세</h2>
+    <h2>HTML</h2>
     <strong><u>-심은성-</u></strong>
-    <p style="margin-top:40px;" >카리나 만세
+    <p>Hypertext Markup Language (HTML) is the standard markup language[a] for documents designed 
+        to be displayed in a web browser.
+        <br>It defines the content and structure of web content.
+        <br>It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages
+        <br>such as JavaScript, a programming language.</p>
 </body>
 </html>
