--- a/2.html
+++ b/2.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html>
 <head>
-<title>카리나 최고 최고 최최고</title>
+<title>심은성의 연습 CSS</title>
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">카리나 목록</a></h1>
+    <h1><a href="index.html">코딩</a></h1>
     <ol>
-        <li><a href="1.html">카리나 만세</a></li>
-        <li><a href="2.html">카리나 최고</a></li>
-        <li><a href="3.html">카리나 아멘</a></li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">PYTHON</a></li>
+        <li><a href="hellper.html">HELLPER</a></li>
     </ol>
-    <h2>카리나 최고</h2>
+    <h2>CSS</h2>
     <strong><u>-심은성-</u></strong>
-    <p style="margin-top:40px;" >카리나 최고
+    <p>Cascading Style Sheets (CSS) is a style sheet language used for specifying the presentation and styling of a document
+        <br>written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).
+        <br>CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 </body>
 </html>
