--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html>
 <head>
-<title>카리나는 신</title>
+<title>심은성의 연습</title>
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">카리나 목록</a></h1>
+    <h1><a href="index.html">코딩</a></h1>
     <ol>
-        <li><a href="1.html">카리나 만세</a></li>
-        <li><a href="2.html">카리나 최고</a></li>
-        <li><a href="3.html">카리나 아멘</a></li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">PYTHON</a></li>
+        <li><a href="hellper.html">HELLPER</a></li>
     </ol>
-    <h2>카리나는 신</h2>
+    <h2>연습을 해보자</h2>
     <strong><u>-심은성-</u></strong>
-    <p><a href="https://www.instagram.com/Katarinabluu/" target="_blank" title="카리나의 일상">카리나</a>는 신이다.</p>
-    <img src="god.jpg" width="30%">
+    <p>저는<a href="https://www.instagram.com/dmddjd_b/" target="_blank" title="카리나의 일상">심은성</a> 입니다.</p>
+    <p>유튜브로 이것저것 배우고있습니다.</p>
+    <img src="코딩이미지.jpg" width="30%">
 </body>
 </html>
